ajout des modifications

--- a/IPhone.html
+++ b/IPhone.html
@@ -77,7 +77,7 @@
                 <h1><b>Explorer la gamme.</b></h1>
                 <a href="#">comparer tous les modèles <i class="fas fa-angle-right"></i></a>
             </div>
-           <section class="card">
+           <section class="card" style="background-color: #f5f5f7;">
              <div class="row">
                 <div class="col l5"></div>
                 <div class="col l1">
@@ -164,5 +164,86 @@
         <button>Regarder le film</button>
     </div>
 </div>
+<section class="apple p-4">
+    <h4><b>Tant de raisons d'acheter votre iPhone <br> chez Apple.</b></4>
+    <div class="row p-4">
+        <div class="col l2">
+            <div class="card ">
+                <img src="image/14.png" alt="" width="235px">
+            </div>
+        </div>
+        <div class="col l2">
+            <div class="card">
+                <img src="image/15.png" alt="" width="235px">
+            </div>
+        </div>
+        <div  class="col l2">
+             <div class="card">
+                <img src="image/16.png" alt="" width="235px">
+            </div>
+        </div>
+        <div class="col l2">
+            <div class="card">
+                <img src="image/17.png" alt="" width="235px">
+            </div>
+        </div>
+        <div class="col l2">
+            <div class="card">
+                <img src="image/18.png" alt="" width="235px">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="iphone p-4">
+    <h1><b>Découvrez l'iPhone.</b></h1>
+    <div class="row p-4">
+        <div class="col l2">
+            <img src="image/19.png" height="400ox" alt="" >
+        </div>
+        <div class="col l2">
+            <img src="image/20.png" height="400ox" alt="" >
+        </div>
+        <div class="col l2">
+            <img src="image/21.png" height="400ox" alt="" >
+        </div>
+        <div class="col l2">
+            <img src="image/22.png" height="400ox" alt="" >
+        </div>
+        <div class="col 2">
+            <img src="image/23.png" height="400ox" alt="" >
+        </div>
+    </div>
+</section>
+<section class="incontournable">
+    <div class="tete">
+        <h3><b>Les incontournables iPhone</b></h3>
+        <a href="#">Tous les accessoires pour iPhone <i class="fas fa-angle-right"></i></a>
+    </div>
+    <article class="accessoires">
+        <div class="row">
+            <div class="col l6">
+                <img src="image/26.png" width="500px" alt="">
+            </div>
+            <div class="col l6">
+                <img src="image/27.png" width="500px" alt="">
+            </div>
+        </div>
+    </article>
+</section>
+<section class="iphone-mac p-4">
+    <div class="container">
+        <div class="card-content" style="background-color: #f5f5f7;">
+        <h4><b>iPhone et Mac</b> <i class="fas fa-angle-up"></i></h4>
+        <div class="row p-4">
+            <div class="col l6">
+                <p>Copier des images, des vidéos ou du texte depuis votre iPhone, puis coller le tout dans une autre app sur votre Mac. Et répondez aux appels et aux messages que vous recevez sur votre iPhone directement depuis votre Mac. Avec iCloud, accédez à vos  fichiers préférés aussi bien de votre iPhone que de votre Mac</p>
+            </div>
+            <div class="col l6">
+                <img src="image/28.png" width="300px" height="300px" alt="">                
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
 </body>
 </html>
