ajout des mogification

--- a/IPhone.html
+++ b/IPhone.html
@@ -245,5 +245,121 @@
     </div>
     </div>
 </section>
+<div class="apple-container">
+    
+    <section class="center-align">
+        <div class="credit-header">
+            Un crédit vous engage et doit être remboursé.<br>
+            Vérifiez vos capacités de remboursement avant de vous engager.
+        </div>
+        <h5 class="cetelem-title">Exemple d’achat avec Cetelem</h5>
+        
+        <div class="left-align">
+            <p class="promo-line">pendant 36 mois au taux débiteur de 0 %</p>
+            <div class="row credit-grid">
+                <div class="col s6 m4 l2 credit-item">
+                    <span class="label">Prix d’achat</span>
+                    <span class="value">1 500,00 €</span>
+                </div>
+                <div class="col s6 m4 l1 credit-item">
+                    <span class="label">TAEG fixe</span>
+                    <span class="value">0 %</span>
+                </div>
+                <div class="col s6 m4 l1 credit-item">
+                    <span class="label">Taux débiteur</span>
+                    <span class="value">0 %</span>
+                </div>
+                <div class="col s6 m4 l2 credit-item">
+                    <span class="label">Montant total des intérêts</span>
+                    <span class="value">0,00 €</span>
+                </div>
+                <div class="col s6 m4 l2 credit-item">
+                    <span class="label">Montant total financé</span>
+                    <span class="value">1 500,00 €</span>
+                </div>
+                <div class="col s6 m4 l2 credit-item">
+                    <span class="label">Durée</span>
+                    <span class="value">36 mois</span>
+                </div>
+                <div class="col s12 m4 l2 credit-item">
+                    <span class="label">Mensualité</span>
+                    <span class="value">41,67 €</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="legal-notes">
+        <p>Dans cet exemple, le montant indiqué n'inclut pas les frais d'expédition ni les accessoires qui ne peuvent pas faire l'objet d'un financement...</p>
+        <p>1. Par rapport à l'iPhone de génération précédente.</p>
+        <p>2. Les iPhone 17, iPhone Air et iPhone 17 Pro sont résistants aux éclaboussures... (IP68).</p>
+        <p>3. Apple Intelligence est disponible en version bêta. La disponibilité peut varier selon les régions.</p>
+        <p>10. Tests réalisés par Apple en juillet 2025 sur des prototypes d'iPhone 17 Pro...</p>
+    </section>
+
+    <section class="footer-nav">
+        <div class="row">
+            <div class="col s12 m3">
+                <h6>S'informer et acheter</h6>
+                <ul>
+                    <li><a href="#">Store</a></li>
+                    <li><a href="#">Mac</a></li>
+                    <li><a href="#">iPad</a></li>
+                    <li><a href="#">iPhone</a></li>
+                    <li><a href="#">Watch</a></li>
+                </ul>
+                <h6>Apple Cartes</h6>
+                <ul>
+                    <li><a href="#">Apple Pay</a></li>
+                </ul>
+            </div>
+            <div class="col s12 m3">
+                <h6>Compte</h6>
+                <ul>
+                    <li><a href="#">Gérer le compte Apple</a></li>
+                    <li><a href="#">iCloud.com</a></li>
+                </ul>
+                <h6>Divertissements</h6>
+                <ul>
+                    <li><a href="#">Apple One</a></li>
+                    <li><a href="#">Apple TV+</a></li>
+                    <li><a href="#">Apple Music</a></li>
+                </ul>
+            </div>
+            <div class="col s12 m3">
+                <h6>Apple Store</h6>
+                <ul>
+                    <li><a href="#">Trouver un Apple Store</a></li>
+                    <li><a href="#">Genius Bar</a></li>
+                    <li><a href="#">Today at Apple</a></li>
+                    <li><a href="#">Apple Trade In</a></li>
+                </ul>
+            </div>
+            <div class="col s12 m3">
+                <h6>Valeurs d'Apple</h6>
+                <ul>
+                    <li><a href="#">Accessibilité</a></li>
+                    <li><a href="#">Environnement</a></li>
+                    <li><a href="#">Confidentialité</a></li>
+                </ul>
+                <h6>À propos d'Apple</h6>
+                <ul>
+                    <li><a href="#">Newsroom</a></li>
+                    <li><a href="#">Garantie</a></li>
+                    <li><a href="#">Investisseurs</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-bottom ">
+            <p>Vous pouvez aussi faire vos achats <a href="#">dans un Apple Store</a> ou <a href="#">chez un revendeur</a>. Ou appeler le 0800 046 046.</p>
+            <hr style="border: 0; border-top: 1px solid #d2d2d7;">
+            <p>Copyright &copy 2025 Apple Inc. Tous droits réservés. 
+               <span class="right hide-on-small-only">France</span>
+            </p>
+        </div>
+    </section>
+
+</div>
 </body>
 </html>
