--- a/IPhone.html
+++ b/IPhone.html
@@ -61,45 +61,45 @@
                 <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i>
                 <h6><b>iPhone 17 Pro</b></h6>
                 <p>Design réinventé.<br>Performances pro repoussées.</p>
-                <p><b>A partir de 55,38 £/mois ou 1329£</b></p>
+                <p><b>A partir de 55,38 $/mois ou 1329$</b></p>
                 <a class="btn blue">En savoir plus</a>
-                <a href="#">Acheter <i class="fas fa-angle-right"></i></a>
+                <a href="#">Acheter<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="col s12 m6 l2">
                 <a href="#"><img src="image/9.png" class="responsive-img"></a>
                 <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i>
                 <h6><b>iPhone Air</b></h6>
                 <p>Le plus fin des iPhone.<br>Avec la force des Pro.</p>
-                <p><b>A partir de 51,21 £/mois ou 1229£</b></p>
+                <p><b>A partir de 51,21 $/mois ou 1229$</b></p>
                 <a class="btn blue">En savoir plus</a>
-                <a href="#">Acheter <i class="fas fa-angle-right"></i></a>
+                <a href="#">Acheter<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="col s12 m6 l2">
                 <a href="#"><img src="image/10.png" class="responsive-img"></a>
                 <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i>
                 <h6><b>iPhone 17</b></h6>
                 <p>Encore plus irrésistible.<br>Et résistant.</p>
-                <p><b>A partir de 40,38 £/mois ou 969£</b></p>
+                <p><b>A partir de 40,38 $/mois ou 969$</b></p>
                 <a class="btn blue">En savoir plus</a>
-                <a href="#">Acheter <i class="fas fa-angle-right"></i></a>
+                <a href="#">Acheter<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="col s12 m6 l2">
                 <a href="#"><img src="image/11.png" class="responsive-img"></a>
                 <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i>
                 <h6><b>iPhone 16</b></h6>
                 <p>Performances exceptionnelles.<br>Design résistant.</p>
-                <p><b>A partir de 36,21 £/mois ou 869£</b></p>
+                <p><b>A partir de 36,21 $/mois ou 869$</b></p>
                 <a class="btn blue">En savoir plus</a>
-                <a href="#">Acheter <i class="fas fa-angle-right"></i></a>
+                <a href="#">Acheter<i class="fas fa-angle-right"></i></a>
             </div>
             <div class="col s12 m6 l2">
                 <a href="#"><img src="image/12.png" class="responsive-img"></a>
                 <i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i>
                 <h6><b>iPhone 16e</b></h6>
                 <p>Il a tout pour lui.<br>Même le prix.</p>
-                <p><b>A partir de 29,96 £/mois ou 719£</b></p>
+                <p><b>A partir de 29,96 $/mois ou 719$</b></p>
                 <a class="btn blue">En savoir plus</a>
-                <a href="#">Acheter <i class="fas fa-angle-right"></i></a>
+                <a href="#">Acheter<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
     </div>
